--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.2.4",
+    "bootstrap": "^5.2.3",
+    "icomoon-react": "^3.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
+    "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.57.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^5.3.6",
+    "styled-icons": "^10.47.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
